--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.11.2",
     "aws-amplify": "^6.14.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
@@ -22,6 +23,7 @@
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "aws-cdk-lib": "^2.189.1",
+    "aws-sdk-mock": "^6.2.1",
     "constructs": "^10.4.2",
     "esbuild": "^0.25.4",
     "eslint": "^9.25.0",
